# planilhas_gov_br

./: .gitignore  .mcp.json  CLAUDE.md  DASHBOARD_PLAN.md  QWEN.md  README.md  apply_migration.py  process_spreadsheets.py  pyproject.toml  upload_to_supabase.py  upload_to_supabase_normalized.py
.qwen/agents/: supabase-data-expert.md
dashboard/: README.md  UI_UX_ANALYSIS.md  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/explorer/: page.tsx
dashboard/components/charts/: timeline-chart.tsx  tipo-autorizacao-chart.tsx  top-orgaos-chart.tsx
dashboard/components/dashboard/: kpi-card.tsx
dashboard/components/layout/: navbar.tsx
dashboard/components/tables/: data-table.tsx  explorer-table.tsx
dashboard/components/ui/: badge.tsx  card.tsx
dashboard/types/: database.ts
migrations/: 001_create_government_data_table.sql  002_enable_rls_policies.sql  003_rename_table_to_autorizacoes_uniao.sql
scripts/: apply_migration.py  process_spreadsheets.py  upload_to_supabase.py  upload_to_supabase_normalized.py
src/planilhas_gov_br/: __init__.py
