[project]
name = "planilhas_gov_br"
version = "0.1.0"
description = "Backend infrastructure for Brazilian public competitions dashboard - ETL pipeline for government spreadsheets"
authors = [{name = "Gabriel Ramos", email = "gabrielramos@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "supabase>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["planilhas_gov_br"]
package-dir = {"" = "src"}
